// Copyright 2018 The gRPC Authors

syntax = "proto3";

package grpc.gcp;

option go_package = "google.golang.org/grpc/credentials/alts/internal/proto/grpc_gcp";
option java_multiple_files = true;
option java_outer_classname = "TransportSecurityCommonProto";
option java_package = "io.grpc.alts.internal";

enum SecurityLevel {
  SECURITY_NONE = 0;
  INTEGRITY_ONLY = 1;
  INTEGRITY_AND_PRIVACY = 2;
}

message RpcProtocolVersions {

  message Version {
    uint32 major = 1;
    uint32 minor = 2;
  }

  Version max_rpc_version = 1;

  Version min_rpc_version = 2;
}

message TransportProtocolPreferences { repeated string transport_protocol = 1; }

message NegotiatedTransportProtocol { string transport_protocol = 1; }
